--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   slack: circleci/slack@3.4.2
-  snyk: snyk/snyk@1.1.2
+  snyk: snyk/snyk@1.4.0
   browser-tools: circleci/browser-tools@1.1
 
 references:
@@ -321,7 +321,7 @@ jobs:
           docker-image-name: vcd:scan
           target-file: ./docker/Dockerfile
           organization: "legal-aid-agency"
-          severity-threshold: "high"
+          severity-threshold: "critical"
           fail-on-issues: true
 
   build-app-container:
