Update cicd parallelism to split by timings
Update the circleci config for parallelism to split tests by timinigs rather than the default of splitting tests by name

This should provide performance benefits / optimize with each test suite run

moreinfo: https://circleci.com/docs/parallelism-faster-jobs/#how-test-splitting-works

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,7 +175,7 @@ commands:
           command: |
             mkdir /tmp/test-results
             tmp/cc-test-reporter before-build
-            TESTFILES=$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split)
+            TESTFILES=$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
             RUBYOPT=-W:no-deprecated \
             bundle exec rspec \
               --format progress \
