Increase the snyk threshold to critical
Update the snyk/scan --severity-threshold to "critical" as there is a high vunerability which blocks the ci/cd pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,7 +286,7 @@ jobs:
           docker-image-name: vcd:scan
           target-file: ./docker/Dockerfile
           organization: "legal-aid-agency"
-          severity-threshold: "high"
+          severity-threshold: "critical"
           fail-on-issues: true
 
   build-app-container:
