--- a/package.json
+++ b/package.json
@@ -8,16 +8,29 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "start:server": "bundle exec puma & wait-on http://localhost:3000/",
-    "start:testserver": "bundle exec puma & wait-on http://localhost:9292/"
+    "start:testserver": "bundle exec puma & wait-on http://localhost:9292/",
+    "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@hotwired/turbo-rails": "^7.2.5",
     "@ministryofjustice/frontend": "^1.6.4",
     "@rails/ujs": "^7.0.4",
-    "@hotwired/turbo-rails": "^7.2.5",
-    "@rails/webpacker": "5.4.3",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-macros": "^3.1.0",
+    "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
     "govuk-frontend": "^4.5.0",
     "jquery": "3.6.3",
-    "postcss": "^8.4.21"
+    "mini-css-extract-plugin": "^2.7.2",
+    "postcss": "^8.4.21",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-remove-empty-scripts": "^1.0.1"
   },
   "devDependencies": {
     "axe-core": "^4.6.3",
@@ -27,29 +40,7 @@
     "stylelint": "^14.16.1",
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^6.0.2",
-    "wait-on": "^7.0.1",
-    "webpack-dev-server": "^4.11.1"
-  },
-  "resolutions": {
-    "ansi-regex": "^5.0.1",
-    "css-what": "^5.0.1",
-    "dot-prop": "^5.2.0",
-    "follow-redirects": "^1.14.7",
-    "glob-parent": "^5.1.2",
-    "hosted-git-info": "^3.0.8",
-    "http-proxy": "^1.18.1",
-    "is-svg": "^4.3.1",
-    "kind-of": "^6.0.3",
-    "minimist": "^1.2.2",
-    "node-forge": "^1.2.1",
-    "normalize-url": "^4.5.1",
-    "nth-check": "^2.0.1",
-    "sass": "~1.32.12",
-    "serialize-javascript": "^3.1.0",
-    "set-value": "^4.0.1",
-    "ssri": "^8.0.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.9.0"
+    "wait-on": "^7.0.1"
   },
   "standard": {
     "globals": [
