CTSKF-242 - Remove webpacker for JsBundler (#1388)
* Remove webpacker for JsBundler

* Cleanup existing files

* Fix linting issues

* Fix rubocop linting issues

* change assets location

* yarn build over assets:precompile

* Update cache

* Fix install command

* Fix install command

* revert Db creds

* Update cache location

* docker file yarn install and build

* fix fonts

* Pull assets from node_modules

* Update cache location

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,23 +33,23 @@ references:
   _restore-assets: &restore-assets
     restore_cache:
       keys:
-        - v1-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
+        - v4-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
         # fallback to using the latest asset cache if no exact match is found
-        - v1-yarn-
+        - v4-yarn-
 
   _install-assets: &install-assets
     run:
       name: Install and compile assets
       command: |
         RUBYOPT=-W:no-deprecated \
-        bundle exec rails assets:precompile
+        yarn install && yarn build --progress --color
 
   _save-assets: &save-assets
     save_cache:
-      key: v1-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
+      key: v4-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
       paths:
         - node_modules
-        - public/packs-test
+        - app/assets/builds
 
   _attach-tmp-workspace: &attach-tmp-workspace
     attach_workspace:
