--- a/.k8s/live/staging/deployment.yaml
+++ b/.k8s/live/staging/deployment.yaml
@@ -91,11 +91,16 @@ spec:
                 secretKeyRef:
                   name: lcdui-rds
                   key: url
-            - name: REDIS_URL
+            - name: REDIS_HOST
               valueFrom:
                 secretKeyRef:
                   name: lcdui-elasticache
-                  key: url
+                  key: primary_endpoint_address
+            - name: REDIS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-elasticache
+                  key: auth_token
             - name: ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
