Add split around defendants v2

--- a/config/split.yaml
+++ b/config/split.yaml
@@ -1,3 +1,5 @@
+# This is for localhost mode
+
 - defendant_v2_page:
-  treatment: 'on'
-  keys: ['manager@example.com', 'paul.king@digital.justice.gov.uk']
+    treatment: 'on'
+    keys: ['manager@example.com', 'paul.king@digital.justice.gov.uk']
