--- a/.k8s/live/dev/deployment.yaml
+++ b/.k8s/live/dev/deployment.yaml
@@ -71,6 +71,8 @@ spec:
               value: 'true'
             - name: HEARING_SUMMARIES
               value: 'true'
+            - name: JUDICIAL_RESULTS
+              value: 'true'
             - name: COURT_DATA_ADAPTOR_API_UID
               valueFrom:
                 secretKeyRef:
