--- a/.k8s/live/production/deployment.yaml
+++ b/.k8s/live/production/deployment.yaml
@@ -69,6 +69,8 @@ spec:
               value: 'true'
             - name: RAILS_LOG_TO_STDOUT
               value: enabled
+            - name: JUDICIAL_RESULTS
+              value: 'false'
             - name: COURT_DATA_ADAPTOR_API_UID
               valueFrom:
                 secretKeyRef:
