--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,10 @@
 version: 2.1
 
 orbs:
+  aws-cli: circleci/aws-cli@4.0.0
+  browser-tools: circleci/browser-tools@1.1
   slack: circleci/slack@3.4.2
   snyk: snyk/snyk@1.1.2
-  browser-tools: circleci/browser-tools@1.1
 
 references:
   _restore-bundle: &restore-bundle
@@ -118,6 +119,12 @@ commands:
       - install-compile-assets
       - install-codeclimate-tt
 
+  aws-cli-setup:
+    steps:
+     - aws-cli/setup:
+        role_arn: $ECR_ROLE_TO_ASSUME
+        region: $ECR_REGION
+
   db-setup:
     steps:
       - run:
@@ -223,6 +230,7 @@ commands:
     steps:
       - checkout
       - setup_remote_docker
+      - aws-cli-setup
       - run:
           name: deploying to << parameters.environment >>
           command: |
@@ -295,6 +303,7 @@ jobs:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
+      - aws-cli-setup
       - *script-build-app-container
 
   deploy-dev:
