--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   aws-cli: circleci/aws-cli@4.0.0
-  browser-tools: circleci/browser-tools@1.1
+  browser-tools: circleci/browser-tools@1.4.3
   slack: circleci/slack@3.4.2
   snyk: snyk/snyk@1.1.2
 
@@ -266,7 +266,9 @@ jobs:
       - checkout
       - restore-dependencies
       - *attach-tmp-workspace
-      - browser-tools/install-browser-tools
+      - browser-tools/install-chrome:
+          chrome-version: 114.0.5735.90
+          replace-existing: true
       - rspec
       - persist_to_workspace:
           root: tmp
