--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -266,6 +266,8 @@ jobs:
       - checkout
       - restore-dependencies
       - *attach-tmp-workspace
+      # TODO: Remove the apt-get update and install-chrome steps after webdriver gem has fixed its chrome compatibility issue.
+      - run: sudo apt-get update
       - browser-tools/install-chrome:
           chrome-version: 114.0.5735.90
           replace-existing: true
