--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,6 +271,7 @@ jobs:
       - browser-tools/install-chrome:
           chrome-version: 114.0.5735.90
           replace-existing: true
+      - run: sudo apt autoremove
       - rspec
       - persist_to_workspace:
           root: tmp
