--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -266,12 +266,7 @@ jobs:
       - checkout
       - restore-dependencies
       - *attach-tmp-workspace
-      # TODO: Remove the apt-get update and install-chrome steps after webdriver gem has fixed its chrome compatibility issue.
-      - run: sudo apt-get update
-      - browser-tools/install-chrome:
-          chrome-version: 114.0.5735.90
-          replace-existing: true
-      - run: sudo apt autoremove
+      - browser-tools/install-chrome
       - rspec
       - persist_to_workspace:
           root: tmp
