--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,9 +268,7 @@ jobs:
       - *attach-tmp-workspace
       # TODO: Remove the apt-get update and install-chrome steps after webdriver gem has fixed its chrome compatibility issue.
       - run: sudo apt-get update
-      - browser-tools/install-chrome:
-          chrome-version: 114.0.5735.90
-          replace-existing: true
+      - browser-tools/install-chrome
       - run: sudo apt autoremove
       - rspec
       - persist_to_workspace:
